Ruutes Work fine now except for getCommentsByTags.
