# routes/taskRoutes.js
@@ -3,16 +3,14 @@ const router = express.Router();
 const tasksController = require('../controllers/taskController');
 
 module.exports = (tasksCollection) => {
-    const { getTasks, getTasksByStatus, getTasksByDuedate, createTask, updateTask, deleteTask } =
-      tasksController(tasksCollection);
-  
-    router.get('/', getTasks);
-  
-    router.get('/:status', getTasksByStatus);
-    router.get('/duedate/:duedate', getTasksByDuedate);
-    router.post('/', createTask);
-    router.put('/:id', updateTask);
-    router.delete('/:id', deleteTask);
-  
-    return router;
+  const controller = tasksController(tasksCollection); // Call the controller function to get the controller object
+
+  router.get('/', controller.getTasks);
+  router.get('/:status', controller.getTasksByStatus);
+  router.get('/dueDate/:dueDate', controller.getTasksByDuedate);
+  router.post('/', controller.createTask);
+  router.put('/:id', controller.updateTask);
+  router.delete('/:id', controller.deleteTask);
+
+  return router;
 };
